# G-n-K-BFF

./: CMakeLists.txt  ColorTrack.cpp  Makefile  PixelColorChooser.cpp  README.md  VideoFeed.cpp  VideoFeed.h  compile_script  main.cpp  webCamCapture.cpp
